--- a/SQLServer2008Developer/Dockerfile
+++ b/SQLServer2008Developer/Dockerfile
@@ -6,8 +6,10 @@
 # .NET 3.5 required for SQL Server
 FROM mcr.microsoft.com/dotnet/framework/sdk:3.5-20191008-windowsservercore-ltsc2019
 
+# Switch to cmd shell
 SHELL ["cmd", "/S", "/C"]
 
+# Switch user to user with more privileges
 USER "NT Authority\System"
 
 # set environment variables
@@ -22,6 +24,7 @@ WORKDIR /
 # download and install Microsoft SQL 2014 Express Edition in one step
 RUN /setup.exe /q /ACTION=Install /INSTANCENAME=SQL /FEATURES=SQLEngine /SQLSVCACCOUNT="NT AUTHORITY\SYSTEM" /SQLSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS" /TCPENABLED=1 /NPENABLED=0 /SKIPRULES=PerfMonCounterNotCorruptedCheck /AGTSVCACCOUNT="NT AUTHORITY\SYSTEM" /IACCEPTSQLSERVERLICENSETERMS
 
+# Set registry values
 RUN powershell -Command \
         set-strictmode -version latest ; \
         stop-service MSSQL`$SQL ; \
@@ -29,6 +32,8 @@ RUN powershell -Command \
         set-itemproperty -path 'HKLM:\software\microsoft\microsoft sql server\mssql10_50.SQL\mssqlserver\supersocketnetlib\tcp\ipall' -name tcpport -value 1433 ; \
         set-itemproperty -path 'HKLM:\software\microsoft\microsoft sql server\mssql10_50.SQL\mssqlserver\' -name LoginMode -value 2 ;
 
+# Expose SQL Server port
 EXPOSE 1433
 
+# Start SQL Server
 CMD powershell ./start -sa_password %sa_password% -attach_dbs \"%attach_dbs%\" -Verbose
